<resources>
    <string name="app_name">HOS</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_proceed">Proceed</string>
    <string name="action_log_out">Log Out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="welcome_text">Welcome</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="inbox_menu_1">Menu 1</string>
    <string name="inbox_menu_2">Menu 2</string>
    <string name="title_activity_inbox">INSPECTIONS</string>
    <string name="title_activity_task_detail">Task</string>
    <string name="title_all">All</string>
    <string name="title_safety">Safety</string>
    <string name="title_rails">Rails</string>
    <string name="title_tiles">Tiles</string>
    <string name="title_spikes">Spikes</string>
    <string name="title_jointBar">Joint Bar</string>
    <string name="title_switch">Switch</string>
    <string name="title_activity_report_add">Report</string>
    <string name="title_activity_report_inbox">Reports</string>
    <string name="title_activity_report_detail">Reports</string>
    <string name="title_activity_defect_code">Defect Code(s)</string>
    <string name="title_activity_popup">Popup</string>
    <string name="title_new_report_btn_edit">UPDATE</string>
    <string name="title_new_report_btn_save">SAVE</string>
    <string name="title_activity_report_view">Reports View</string>
    <string name="empty_location_value">0.0</string>
    <string name="welcome_txt">Welcome Back</string>
    <string name="err_internet_not_available">Server unreachable, check internet connection!</string>
    <string name="title_activity_issues">Issues Activity</string>
    <string name="tab_text_1">ISSUES</string>
    <string name="tab_text_2">FORMS</string>
    <string name="tab_text_3">ASSET</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login_version_title">Version:</string>
    <string name="hello_blank_fragment">Form</string>
    <string name="title_activity_rpt_time_and_gps">Time And Gps Report</string>
    <string name="description_placeholder">Please add description...</string>
    <string name="description_title">Description</string>
    <string name="pictures_after_fix_title">------------Pictures After Fix------------</string>
    <string name="pictures_title">------------Pictures------------</string>
    <string name="voice_notes_title">------------Voice Notes------------</string>
    <string name="title_activity_asset_maps">Asset Map</string>
    <string name="work_plan">INSPECTION</string>
    <string name="task_status">Task Status</string>
    <string name="reported">Reported</string>
    <string name="time_elapsed">Time Elapsed</string>
    <string name="stop">STOP</string>
    <string name="select_work_plan">SELECT INSPECTION RUN</string>
    <string name="inspections">INSPECTIONS</string>
    <string name="sync">JOB SAFETY BRIEFING</string>
    <string name="reports">REPORTS</string>
    <string name="inspection">INSPECTION:</string>
    <string name="task_dashboard">TASK Dashboard</string>
    <string name="task_started">Task Started</string>
    <string name="issues">Issues</string>
    <string name="images">Images</string>
    <string name="start">START</string>
    <string name="long_press_to_activate">Please long press to activate</string>
    <string name="enable_location">Please enable location to continue</string>
    <string name="task_closed">Task Closed!</string>
    <string name="view_running_task">View Running Task</string>
    <string name="view">View</string>
    <string name="time_total">Time Total</string>
    <string name="sync_service_running">Sync Service Already Running ...</string>
    <string name="network_unavailable">Network unavailable!</string>
    <string name="long_press_to_continue">Please long press option to continue</string>
    <string name="confirmation">Confirmation!</string>
    <string name="want_to_stop_inspection">Do you really want to stop Inspection?</string>
    <string name="status">Status</string>
    <string name="please_wait">Please Wait!</string>
    <string name="waiting_for_sync_service">Waiting for sync service</string>
    <string name="no_last_inspection">No Last Inspection!</string>
    <string name="work_plan_starting">Inspection Starting,Please wait…</string>
    <string name="inspection_started">Inspection Started</string>
    <string name="unable_to_start_inspection">Unable to Start Inspection</string>
    <string name="complete_all_tasks">Please complete all task to close session</string>
    <string name="unable_to_find_work_plan">Unable to find Inspection</string>
    <string name="finishing_inspection">Please wait! Finishing Inspection</string>
    <string name="inspection_closed">Inspection Closed successfully</string>
    <string name="enable_gps">Please enable GPS, Try again</string>
    <string name="want_to_log_out">Do you really want to Log Out?</string>
    <string name="log_out_first_server_info">Please LogOut first, to access settings !</string>
    <string name="language_setting">Language</string>
    <string name="lang_dialog_title">Select Language</string>
    <string name="lang_dialog_message">Select Language</string>
    <string name="want_to_select_asset">Do you really want to select ?</string>
    <string name="want_to_start_task">Do you really want to Start Task?</string>
    <string name="want_to_start_task_title">Start Task?</string>
    <string name="want_to_end_task_title">End Task?</string>
    <string name="want_to_end_task">Do you really want to end task?</string>
    <string name="press_add_button">* Please press (+) button to add</string>
    <string name="assets">ASSETS:</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="task">Task</string>
    <string name="asset_type">Asset Type</string>
    <string name="track_segment">Asset</string>
    <string name="no_def_code">No defect code available !</string>
    <string name="title_activity_select_asset">Select Asset</string>
    <string name="title_activity_server_info">Settings</string>
    <string name="title_activity_monitoring">Monitoring</string>
    <string name="title_activity_task_dashboard">Task Dashboard</string>
    <string name="your_location">Your Location</string>
    <string name="select_asset">Select Asset</string>
    <string name="marked_on_site">Fixed on site?</string>
    <string name="priority">Priority</string>
    <string name="check_list">Check List</string>
    <string name="def_codes">Defect Codes</string>
    <string name="track_defects">Track Defects!</string>
    <string name="select_priority">Please select priority</string>
    <string name="select_description">Please enter description</string>
    <string name="hold_to_record">Hold to record!</string>
    <string name="report_time_and_gps">Time and GPS Report</string>
    <string name="report_time_and_gps_map">Time and GPS Map Report</string>
    <string name="report_loading">Loading Report</string>
    <string name="report_time_and_gps_detail">Report will show your all day time sheet along with GPS coordinates</string>
    <string name="report_time_and_gps_map_detail">Report will show your all day time sheet on map</string>
    <string name="started">Started</string>
    <string name="issue">Issue</string>
    <string name="completed">Completed</string>
    <string name="day_closed">Day Closed</string>
    <string name="closed">Closed</string>
    <string name="date">Date</string>
    <string name="want_to_start_work_plan">Do you really want to Start</string>
    <string name="last_execution">Last Execution</string>
    <string name="days_ago">day(s) ago</string>
    <string name="next_inspection">Next Inspection</string>
    <string name="server">Server:</string>
    <string name="port">Port</string>
    <string name="add">ADD</string>
    <string name="global_settins">Global Settings</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="gps_log_text">GPS Logging</string>
    <string name="clear">Clear</string>
    <string name="cleared_all_data">Successfully Cleared all data!</string>
    <string name="err_invalid_server_info">Invalid Server Information !</string>
    <string name="want_to_use_this_server">Do you want to use this Server ?</string>
    <string name="successfully_activated">Successfully Activated</string>
    <string name="err_edit_server_config">Unable to Edit the active config !</string>
    <string name="err_unable_remove_active_server">Unable to Remove the active config !</string>
    <string name="want_to_remove_server">Do you really want to remove this Server Info?\"</string>
    <string name="successfully_updated">Updated Successfully</string>
    <string name="performed">Performed?</string>
    <string name="yes_no">Yes/No</string>
    <string name="text_linear_assets">Linear Assets</string>
    <string name="text_fixed_assets">Fixed Assets</string>
    <string name="title_activity_safety_briefing">SafetyBriefingActivity</string>
    <string name="safety_briefing_tab_text_1">BRIEFING</string>
    <string name="safety_briefing_tab_text_2">WORKERS</string>
    <string name="safety_briefing_tab_text_3">COMMENTS</string>
    <string name="activity_title_worker_add">ADD WORKER</string>
    <string name="activity_date_time">Date and Time</string>
    <string name="activity_work_location">Work Location</string>
    <string name="activity_description">Description of Work Assignment</string>
    <string name="activity_qpe">Qualified Protection Employee (QPE) in charge of providing on-track protection</string>
    <string name="activity_qualification_card">Confirm Current Qualifications (Date on Qualification Card</string>
    <string name="activity_roadway_protection">On what Line and track(s) will the Roadway Worker protection be required?</string>
    <string name="activity_Authorized_Speed">Track Maximum Authorized Speed (MAS)</string>
    <string name="activity_form_Protection">What form of Protection will be used?</string>
    <string name="activity_ITD_QPE">If using Individual Train Detection (ITD), you must be a QPE. What time has the Train Dispatcher been notified of your intention to use ITD as protection</string>
    <string name="briefing_itd">ITD</string>
    <string name="briefing_foul_time">Foul Time</string>
    <string name="briefing_taws">TAW</string>
    <string name="briefing_work_zone">Work Zone</string>
    <string name="briefing_oos">OOS</string>
    <string name="briefing_foul_time_forms">Do you have Foul Time Forms?</string>
    <string name="briefing_yes">Yes</string>
    <string name="briefing_no">No</string>
    <string name="briefing_advanced_watchpersons">If Yes, have you considered the requirement for additional advanced watchpersons?</string>
    <string name="briefing_any_direction">Remember - Any Time, Any Direction!</string>
    <string name="briefing_foul_explain">If No, explain</string>
    <string name="briefing_dangers_of_equipment">Dangers of Equipment</string>
    <string name="briefing_spacing">Spacing</string>
    <string name="briefing_speeds">Speeds</string>
    <string name="briefing_weather_conditions">Weather Conditions</string>
    <string name="select_text">SELECT</string>
    <string name="server_settings">Server Settings</string>
</resources>