<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">
 
  <CheckBox
    android:id="@+id/checkBox_itd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/briefing_itd" />
	
	<CheckBox
    android:id="@+id/checkBox_ft"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/briefing_foul_time" />
	
	<CheckBox
    android:id="@+id/checkBox_taw"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/briefing_taws" />
	
	<CheckBox
    android:id="@+id/checkBox_wz"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/briefing_work_zone" />
	
	<CheckBox
    android:id="@+id/checkBox_oos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/briefing_oos" />
 
</LinearLayout>