<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp">


	<TextView
		android:id="@+id/textView_row_231"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:text="@string/briefing_dangers_of_equipment" />
 
  <TextView
    android:id="@+id/textView_row_232"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	  android:padding="8dp"
	  android:text="@string/briefing_spacing" />
	
	<TextView
    android:id="@+id/textView_row_233"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
		android:padding="8dp"
    android:text="@string/briefing_speeds" />
	
	<TextView
    android:id="@+id/textView_row_234"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
		android:padding="8dp"
    android:text="@string/briefing_weather_conditions" />
 
</LinearLayout>