<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">


<RadioGroup
	android:id="@+id/rg_row_17"
	style="@style/RadioGroupStyle">
	
	<RadioButton
    android:id="@+id/radioButton_yes_17"
		style="@style/RadioButtonStyle"
    android:text="@string/briefing_yes" />
	
	<RadioButton
    android:id="@+id/radioButton_no_17"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/briefing_no" />
	
	</RadioGroup>
	<TextView
		android:id="@+id/textView_row_17_a"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@style/TextviewStyle"
        android:padding="10dp"
		android:gravity="center"
		android:text="@string/briefing_any_direction" />
	
	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
		<TextView
			android:id="@+id/textView_row_17_b"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/briefing_foul_explain" />

		<EditText
			android:id="@+id/ed_row_17"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	

 
</LinearLayout>