<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/serverPageToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <!--<LinearLayout
        android:layout_below="@+id/appbarlayout"
        android:id="@+id/serverInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server" />

            <EditText
                android:id="@+id/edServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port" />

            <EditText
                android:id="@+id/edPort"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="6"
                android:digits="0123456789" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnAddServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />
            <Button
                android:id="@+id/btn_test_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TEST"/>
            &lt;!&ndash;<Button
                android:id="@+id/btnActivateServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ACTIVATE"/>&ndash;&gt;
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/serverInfoLayout"
        android:background="@color/divider_hint" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/serverInfoLayout">
        <LinearLayout
            android:id="@+id/lvLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lvServerInfo"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_weight="1">

            </ListView>
        </LinearLayout>-->
        <LinearLayout
            android:id="@+id/ll_ser_info"
            android:layout_below="@id/appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/divider_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_tile_disabled_dark"
                android:text="@string/server_settings"
                android:textAlignment="center"
                android:textColor="@color/credentials_white"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_selected_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="9dp"
                    android:text="@string/server"
                    app:fontFamily="sans-serif-condensed" />
                <Button
                    android:id="@+id/btn_select_server"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_margin="5dp"
                    android:background="@color/report_btn_add"
                    android:textColor="@color/credentials_white"
                    android:text="@string/select_text"/>
                <View
                    android:id="@+id/dividerLast"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/btn_select_server"
                    android:background="@color/divider_hint" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/ll_ser_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <View
                android:id="@+id/secondLastDivider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/divider_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_tile_disabled_dark"
                android:text="@string/global_settins"
                android:textAlignment="center"
                android:textColor="@color/credentials_white"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_clr_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="9dp"
                    android:text="@string/clear_all_data"
                    app:fontFamily="sans-serif-condensed" />
                <Button
                    android:id="@+id/btnClearData"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_margin="5dp"
                    android:background="@color/report_btn_add"
                    android:textColor="@color/credentials_white"
                    android:text="@string/clear"/>
                <View
                    android:id="@+id/LastDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/btnClearData"
                    android:background="@color/divider_hint" />
            </RelativeLayout>
           <!-- <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="9dp"
                    android:text="@string/gps_log_text"
                    app:fontFamily="sans-serif-condensed" />
               &lt;!&ndash; <Button
                    android:id="@+id/btnClearData"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_margin="5dp"
                    android:background="@color/report_btn_add"
                    android:textColor="@color/credentials_white"
                    android:text="@string/clear"/>&ndash;&gt;
                <Switch
                    android:id="@+id/gps_logging_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="20dp"
                    android:textOff="Off"
                    android:textOn="On" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/gps_logging_switch"
                    android:background="@color/divider_hint" />
            </RelativeLayout>-->


        </LinearLayout>

    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lvLayout"
         android:orientation="horizontal">
         <Button
             android:id="@+id/btnUpdateServer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Update"/>
         <Button
             android:id="@+id/btnCancelServer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"/>
     </LinearLayout>-->

</RelativeLayout>